// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`homePageReducer handle the clear state action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "articles": Immutable.List [],
  "offset": 0,
}
`;

exports[`homePageReducer handle the load articles all action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "articles": Immutable.List [],
  "offset": 0,
}
`;

exports[`homePageReducer handle the load articles all error action 1`] = `
Immutable.Map {
  "loading": false,
  "error": [Error: Test Error],
  "articles": Immutable.List [],
  "offset": 0,
}
`;

exports[`homePageReducer handle the load articles all success action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "articles": Immutable.List [],
  "offset": 0,
}
`;

exports[`homePageReducer handle the load articles error action 1`] = `
Immutable.Map {
  "loading": false,
  "error": [Error: Test Error],
  "articles": Immutable.List [],
  "offset": 0,
}
`;

exports[`homePageReducer handle the load next action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "articles": Immutable.List [],
  "offset": 0,
}
`;

exports[`homePageReducer handle the load next success action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "articles": Immutable.List [],
  "offset": 0,
}
`;

exports[`homePageReducer returns the initial state 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "articles": Immutable.List [],
  "offset": 0,
}
`;
